--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <img src = "./Images/Elias,Carson (1).JPG" height = 200>
     <hr/>
     <h2>Who am I?</h2>
-    I am a upcoming Junior at the Univeristy of Georgia. I am currently pursing<br/> 
+    Hello, I am a upcoming Junior at the Univeristy of Georgia. I am currently pursing<br/> 
     a major in Computer Science and intend on graduating with an emphasis in AI development<br/>
     as well as a Masters in Computer Science. Some activities I really enjoy are baseball, hunting, and fishing.<br>
     I grew up in Cumming, GA and immediatly embraced nature as a kid so the outdoors are a big part of my life.  
