--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </ul>
     <h2>Skills</h2>
     <ul>
-        <li>Softwar Development</li>
+        <li>Software Development</li>
         <li>API Development</li>
         <li>Java</li>
         <li>C programming language</li>
