fix spacing issue

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     designing and developing efficient APIs to enhance operational processes<br>
                     within my Toyota family. With a focus on streamlining workflows and optimizing data management, I have successfully implemented several APIs that extract/put<br>
                     and manipulate data from/into databases.</li>
-                <li>I also was able to work on a documentation assignment. I collected data('fields')<br>
+                <li>I also was able to work on a documentation assignment. I collected data('fields')
                      and sorted and organized them on a unified documentation for not only MFS, but TMNA<br> as well. This allows them to be more efficent when accessing data and <br>thus helps them with their buisness. This in return helps TFS because MFS and TMNA are under TFS.
                 </li>
             </ul>
